RAGTool Fix for pure json object