@@ -87,8 +87,18 @@ public class RAGTool implements Tool {
         outputParser = new Parser() {
             @Override
             public Object parse(Object o) {
-                List<ModelTensors> mlModelOutputs = (List<ModelTensors>) o;
-                return mlModelOutputs.get(0).getMlModelTensors().get(0).getDataAsMap().get("response");
+		try {
+                	List<ModelTensors> mlModelOutputs = (List<ModelTensors>) o;
+                	Map<String, ?> dataAsMap = mlModelOutputs.getFirst().getMlModelTensors().getFirst().getDataAsMap();
+                	// Return the response field if it exists, otherwise return the whole response as json string.
+                	if (dataAsMap.containsKey(responseField)) {
+                    	    return dataAsMap.get(responseField);
+                	} else {
+                      	   return StringUtils.toJson(dataAsMap);
+                	}
+            	} catch (Exception e) {
+                    throw new IllegalStateException("LLM returns wrong or empty tensors", e);
+                }
             }
         };
     }
